--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@zappjs/prettier",
   "version": "0.1.0",
   "main": "dist/index.js",
+  "dependencies": {
+    "@zappjs/core": "^2.0.0-alpha",
+    "@zappjs/json": "^0.1.0"
+  },
   "devDependencies": {
     "typescript": "^3.2.1"
   },
